      ==23983==    by 0x506D857: ??? (in /usr/lib/x86_64-linux-gnu/libpcap.so.1.4.0)
      ==23983==    by 0x117865: pcap_capture (pcap_capture.c:270)
      ==23983==    by 0x10F937: main (fwknopd.c:353)

    - [libfko] Better SPA packet dumping output to include GnuPG specifics
      whenever SPA packets are encrypted/authenticated via GnuPG.
    - [client+server] Add --gpg-exe command line argument and GPG_EXE config
      variable to ~/.fwknoprc and the access.conf file so that the path to
      GnuPG can be changed from the default /usr/bin/gpg path.
    - [libfko] Allow usernames that are compatible with Microsoft guidelines as
      defined here: http://technet.microsoft.com/en-us/library/bb726984.aspx
      This allows for greater compatibility between fwknop clients on Windows
      (for example that may be deployed with Cygwin) and fwknopd on other
      systems.  This change was suggested by Gerry Reno, and closes Github
      issue #114.
    - [client] Minor bug fixes in 'udpraw' mode (normally used for spoofing the
      SPA source IP) to set a non-zero source port and to properly set the
      length field of the UDP header.
    - [test suite] Added valgrind suppressions for gpgme library function
      calls.
    - [test suite] Added Rijndael+HMAC command execution test.
    - [test suite] Added Rijndael+HMAC NAT rand port via client rc file test.

fwknop-2.6.0 (01/12/2014):
    - (Radostan Riedel) Added an AppArmor policy for fwknopd that is known to
      work on Debian and Ubuntu systems.  The policy file is available at
      extras/apparmor/usr.sbin/fwknopd.
    - [libfko] Nikolay Kolev reported a build issue with Mac OS X Mavericks
      where local fwknop copies of strlcat() and strlcpy() were conflicting
      with those that already ship with OS X 10.9. Closes #108 on github.
    - [libfko] (Franck Joncourt) Consolidated FKO context dumping function into
      lib/fko_util.c. In addition to adding a shared utility function for